--- a/sass/layout/_mobile.scss
+++ b/sass/layout/_mobile.scss
@@ -69,7 +69,7 @@
   .card {
     height: fit-content;
     div {
-      height: auto;
+      height: 250px;
     }
     .card-title {
       font-size: 1.25rem;
